# esp_s3_touch_lcd_1_28_example_slint

./: Cargo.toml  build.rs
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
docs/: README.md
scripts/: flash.sh
src/: main.rs
ui/: main.slint
